FIX deprecation issues in Java 17+